# fingertips-consol

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Makefile  PROGRESS.md  README.md  pyproject.toml
assets/: sample-indicators.json
docs/: architecture.md  fingertips-api-intro-tutorial.md  ideas.md  open-questions-decision-ui.html  open-questions.md  prototype.md  specification.md  tutorial.md  user-guide.md
scripts/: run_live_prototype.sh  run_routine.sh  update_progress.sh
src/fingertips_consol/: __init__.py  cli.py  config.py  decision_defaults.py  models.py
src/fingertips_consol/analysis/: benchmark.py  trends.py
src/fingertips_consol/ingest/: fingertips_client.py
src/fingertips_consol/notifications/: highlights.py
src/fingertips_consol/reporting/: report_builder.py
src/fingertips_consol/workflows/: generate_reports.py  live_prototype.py
tests/: test_cli.py  test_config.py  test_decision_defaults.py
tests/analysis/: test_benchmark.py  test_trends.py
tests/ingest/: test_fingertips_client.py
tests/notifications/: test_highlights.py
tests/reporting/: test_report_builder.py
tests/workflows/: test_generate_reports.py  test_live_prototype.py
